--- a/css/style.css
+++ b/css/style.css
@@ -44,32 +44,37 @@
 	background: #fff;
 	margin-left: 40%;
 	line-height: 25px;
+	
 }
 
 .header__nav {
 	padding: 0;
 	margin: 0;	
-	height: 25px;
+	height: 50px;
 }
 
 
 .header__navigation {
 	display: inline-block;
-	vertical-align: top;
-	padding-right: 25px;
-	padding-top: 14px;
-	padding-bottom: 14px;
-	padding-left: 25px;
 }
-
+.header__navigation-menu {
+	position: relative;
+}
 
 .header__menu {
 	font-family: "Arial", sans-serif;
 	font-size: 14px;
+	display: block;
 	text-transform: uppercase;
 	text-decoration: none;
 	color: #2f1a36;
 	font-weight: 700;
+}
+.header__menu-btn {
+	padding-top: 14px;
+	padding-bottom: 14px;
+	padding-right: 25px;
+	padding-left: 25px;
 }
 
 @media all and (max-width: 640px) {
@@ -117,7 +122,10 @@
 	 height: 100vh !important;
 	 object-fit: cover !important;
 	}
-
+ .header__menu-hamburger {
+	display: block ;
+	padding-bottom: 40px;
+}
 }
 
 .header__logo {
@@ -135,16 +143,12 @@
 	line-height: 28px;
 }
 
-.header__menu-hamburger {
-  position: relative;
-  padding-left: 1.25em;
-}
 
 .header__menu-hamburger:before {
   content: "";
   position: absolute;
-  left: 0;
-  top: 0.25em;
+  left: 50%;
+  top: 25px;
   width: 1em;
   height: 0.15em;
   background: #000;
@@ -153,11 +157,21 @@
     0 0.5em 0 0 black;
 }
 
+.header__menu-hamburger {
+  position: relative;
+  height: auto;
+  padding-left: 25px;
+  padding-right: 40px;
+  padding-top: 20px;
+  padding-bottom: px;
+  margin: 0;
+}
+
 .header__active {
 	border-right: 2px solid #2f1a36;	
 }
 
-.header__navigation:hover {
+.header__menu-btn:hover {
 	background: #F5F5F5;
 	border-right: 2px solid #DCDCDC;
 }
