--- a/less/style.less
+++ b/less/style.less
@@ -1,2 +1,12 @@
 /* LESS Document */
-
+@import "variables.less";
+@import "mixins.less";
+@import "scaffolding.less";
+@import "blocks/page-header.less";
+@import "blocks/main-nav.less";
+@import "blocks/statistics.less";
+@import "blocks/features.less";
+@import "blocks/news.less";
+@import "blocks/reviews.less";
+@import "blocks/page-footer.less";
+@import "blocks/pop-up.less";
