--- a/less/variables.less
+++ b/less/variables.less
@@ -1,2 +1,10 @@
 /* LESS Document */
+@bg-darkgrey: #292929;
+@bg-lightgrey: #f8f5f2;
 
+@baseFS: 18px;
+@baseLH: 27px;
+
+@mobile-width: ~("min-width: 320px");
+@tablet-width: ~("min-width: 768px");
+@destkop-width: ~("min-width: 1200px");
