--- a/less/style.less
+++ b/less/style.less
@@ -2,4 +2,4 @@
 @import "variables.less";
 @import "mixins.less";
 @import "scaffolding.less";
-@import "blocks/page-header.less";
+@import "blocks/header.less";
