--- a/less/variables.less
+++ b/less/variables.less
@@ -1,9 +1,13 @@
 /* LESS Document */
 @bg-darkgrey: #292929;
-@bg-lightgrey: #f8f5f2;
+@bg-lightgrey: #fff;
+
+@hover-bg: #F5F5F5;
 
 @baseFS: 18px;
 @baseLH: 27px;
+@baseH1: 36px;
+@baseLH1: 46px;
 
 @mobile-width: ~("min-width: 320px");
 @tablet-width: ~("min-width: 768px");
