gulp-endgit status!

--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -75,3 +75,74 @@
 .header__active {
 	border-right: 4px solid #2f1a36;	
 }
+
+
+ @media all and (min-width: 640px) { 
+.header{
+	background: @bg-lightgrey;
+}
+
+.test {
+	background: #fff;
+	background-size: contain;
+	background-attachment: fixed;	
+}
+
+.header__main {
+	height: 100px;
+}
+
+.header__navigation {
+	display: inline-block;
+}
+.header__navigation-menu {
+	position: relative;
+}
+.header__menu-btn {
+	padding-top: 14px;
+	padding-bottom: 14px;
+	padding-right: 25px;
+	padding-left: 25px;
+}
+.header__menu-hamburger{
+	position: relative;
+    left: 0px;
+	top: -180px;
+	padding-bottom: 0px;
+	padding-left: 10px;
+	padding-right: 110px;
+	padding-top: 10px;
+}
+
+.header__menu-hamburger:before {
+
+}
+
+.header__nav {
+	padding: 0;
+	margin-left: auto;
+	margin-right: auto;
+	height: 50px;
+	width: 640px;
+}
+.header__navigation {
+	display: inline-block;
+	float:left;
+}
+
+.header__navigation-menu {
+	position: relative;
+	display: block;
+	float: left;
+	width: 100px;
+	background: red;
+	height: 55px;
+	right: 0;
+}
+.header__menu-btn {
+	padding-top: 14px;
+	padding-bottom: 14px;
+	padding-right: 25px;
+	padding-left: 25px;
+  }
+}
