--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -55,7 +55,7 @@ table{
 
 
 body{
-  background: red;
+  background: #fff;
   color: #2f1a36;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: @baseFS;
