--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -55,7 +55,9 @@ table{
 
 
 body{
-  background: #fff;
+  background:#fff url(../img/bg.png) no-repeat left top;
+  background-size: contain;
+  background-attachment: fixed;
   color: #2f1a36;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: @baseFS;
