--- a/src/less/blocks/gallery.less
+++ b/src/less/blocks/gallery.less
@@ -1,3 +1,6 @@
+.gallery {
+	background: #fff;
+}
 .gallery__main {
 	display: block;
 	overflow: hidden;
@@ -23,18 +26,7 @@
 @media all and (min-width: 640px) {
 
 	.gallery__main {
-	display: inline-block;
-	position: relative;
-	overflow: auto;
-	padding: 30px;
-	margin: 0px;
-	margin-left: 0;
-	margin-top: 10px;
-	z-index: 1;
-	height: auto;
-	width: auto;
-	top: 0;
-	right: 0;
+	padding: 60px;
 }
 
 .gallery__col {
@@ -80,12 +72,17 @@
  @media all and (min-width: 960px) {
 
  .gallery__main {
+	display: inline-block;
+	position: relative;
 	overflow: auto;
 	padding: 0px;
-	margin-top: 0px;
-	height: 420px;
-	width: 640px;
-	left: 560px;
+	margin: 0px;
+	margin-left: 600px;
+	margin-top: 100px;
+	top: 0;
+	left: 0;
+	height: 100vh;
+	width: 760px;
 }
 
 .gallery__col {
