--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -27,6 +27,7 @@
   background-size: contain;
   background-attachment: fixed;
   position: fixed;
+  z-index: -1;
  }
   .top-text {
     color: #fff;
