--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -23,7 +23,7 @@
 
 @media all and (min-width: 960px) {
   .gallery {
-  background: #fff url(../img/bg.png) no-repeat left top;
+  background: #76c7c0 url(../img/bg.png) no-repeat left top;
   background-size: contain;
   background-attachment: fixed;
   position: fixed;
