--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -36,7 +36,7 @@ table{
 
 
 @font-face{
-  font-family: "PT Sans";
+  font-family: "OpenSans";
   src: local("PT Sans"),
   url("../fonts/ptsans.woff2") format("woff2"),
   url("../fonts/ptsans.woff") format("woff");
@@ -55,17 +55,37 @@ table{
 
 
 body{
-  background:#fff url(../img/bg.png) no-repeat left top;
+ /* background:#fff url(../img/bg.png) no-repeat left top;
   background-size: contain;
-  background-attachment: fixed;
-  color: #2f1a36;
-  font-family: "PT Sans", "Arial", sans-serif;
+  background-attachment: fixed;*/
+  color: #777777;
+ /* font-family: "PT Sans", "Arial", sans-serif;
   font-size: @baseFS;
-  line-height: @baseFS;
+  line-height: @baseFS;*/
 }
 
 
-img{
+/*img{
   max-width: 100%;
   height: auto;
+}*/
+
+
+/*убрал синюю подсветку при нажатие*/
+*:focus {
+   outline:none;
+}
+
+::-webkit-scrollbar {
+    width: .65em;
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgba(217, 217, 217, 0.75);
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(170, 170, 170, 0.6);
+    border-radius: 5px;
+    box-shadow: inset 0.05em 0.05em 0 rgba(0, 0, 0, 0.1), inset 0 -0.05em 0 rgba(0, 0, 0, 0.07);
 }
